--- a/angularIntegration/src/main/resources/application.properties
+++ b/angularIntegration/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:mysql://localHost/db_springboot_backend
 spring.datasource.username=root
-spring.datasource.password=sasa
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=debug
