--- a/front/package.json
+++ b/front/package.json
@@ -21,11 +21,12 @@
     "bootstrap": "^5.3.0-alpha3",
     "node": "^21.2.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.1",
+    "@angular-devkit/build-angular": "^16.2.11",
     "@angular/cli": "~16.0.1",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
